tests/whiley/invalid/test_141.wyal
type scf9nat is (int n)
where:
    n > 0


type scf9arr is ({scf9nat f, int g}[] ls)
where:
    exists(int i):
        ((0 <= i) && (i < |ls|)) && (ls[i].f == 1)


assert "type invariant not satisfied":
    forall({int f, int g}[] x$1, {int f, int g}[] x):
        if:
            x == [{f: 1, g: 2}, {f: 4, g: 8}]
            x$1 == x[0:=x[0]{f:=2}]
        then:
            x$1 is scf9arr


